# hello_world

./: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
src/: hello_chirp.c  hello_chirp.h  main.c
src/inc/: Doxyfile  ch101.h  ch201.h  ch_common.h  ch_driver.h  chirp_board_config.h  chirp_bsp.h  soniclib.h  zy_gpio.h  zy_i2c.h  zy_sleep.h
src/lib/: ch101_gpr_open.c  ch201_gprmt_fw.c  ch_api.c  ch_common.c  chirp_bsp.c  zy_gpio.c  zy_i2c.c  zy_sleep.c
src/src/: ch101_gpr_open_fw.c  ch101_gpr_sr_open.c  ch101_gpr_sr_open_fw.c  ch201_gprmt.c  ch_driver.c  chirp_bsp.c  zy_i2c.c
